test/runtime/fail/if/missing_condition.hy

// expect error: Expected operand in expression

if {
	// ...
}
